<resources>
    <string name="app_name">SoftwarepatternsCA4</string>
    <string name="UsernameString">Username</string>
    <string name="PasswordString">Password</string>
    <string name="EnterBtnString">Enter</string>
    <string name="SignUpBtnString">Sign Up</string>
    <string name="EmailString">Email</string>
    <string name="LoginBtnString">Login</string>
    <string name="SignUpBanner">Sign Up</string>
    <string name="ShippingAddressString">Shipping Address</string>
    <string name="paymentMethodString">Payment Method</string>
    <string name="NameString">Name</string>
    <string name="TitleString">Title</string>
    <string name="ManufacturerString">Manufacturer</string>
    <string name="PriceString">Price</string>
    <string name="CategoryString">Category</string>
    <string name="ChooseImageString">Choose an Image</string>
    <string name="SubmitProductString">Submit Product</string>
    <string name="appName">ElecTonic</string>
    <string name="purchasehistorystring">Purchase History</string>
    <string name="profileSTring">Profile</string>
    <string name="profileDetails">Profile Details</string>

    <string name="LoyaltyCard">Loyalty Card</string>

</resources>